# discord-monkey-bot

./: README.rst  pyproject.toml
src/: service.py
